auth finished token checked
